fix: align content

--- a/wp-content/themes/biodonatum/css/checkout.css
+++ b/wp-content/themes/biodonatum/css/checkout.css
@@ -223,6 +223,7 @@ textarea::placeholder {
 	}
 	.checkout tfoot td {
 		padding-right: 20px;
+		text-align: right;
 	}
 
 	.checkout tfoot tr:last-child th,
